--- a/Plantilla.tex
+++ b/Plantilla.tex
@@ -8,10 +8,10 @@
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
 
-\title{\textless Práctica | Ejercicio Semanal X\textgreater}
-\author{\textless Integrante(s)\textgreater}
+\title{Ejercicio Semanal 01}
+\author{Galeana Araujo Emiliano}
 \affil{Facultad de Ciencias, UNAM}
-\date{\textless Fecha de entrega\textgreater}
+\date{Fecha de entrega: 17 Agosto 2018}
 
 \begin{document}
 
