--- a/EjerSem/EjerSem3/readme.tex
+++ b/EjerSem/EjerSem3/readme.tex
@@ -26,100 +26,84 @@
   {|}{{$\mid$}}1               
 }
 
-\title{Ejercicio Semanal 1}
+\title{Ejercicio Semanal 3}
 \author{Emiliano Galeana Araujo}
 \affil{Facultad de Ciencias, UNAM}
-\date{Fecha de entrega: 17 de Agosto de 2018}
+\date{Fecha de entrega: 08 de Noviembre de 2018}
 
 \begin{document}
 
 \maketitle
 
 \section{Descripción del programa}
-En este semanal vemos dos tipos de datos, las listas Snoc, y números naturales
-con su representación en binario.
-\subsection{Listas Snoc}
-
+En este semanal implementamos un lenguaje llamado miniC, el cual es un lenguaje
+imperativo que tiene como núcleo el lenguaje de expresiones aritmetico booleanas.
+\subsection{MiniC}
+Recordemos el lenguaje de EAB y agregamos el comportamiento de nuevos
+contrusctores para miniC.
 \begin{code}
-  data ListS a = NilS | Snoc (ListS a) a deriving Show
+  data Exp = V identifier | I Int | B Bool
+    | Add Exp Exp | Mul Exp Exp | Succ Exp | Pred Exp 
+    | And Exp Exp | Or Exp Exp  | Not Exp
+    | Lt Exp Exp  | Gt Exp Exp  | Eq Exp Exp
+    | If Exp Exp Exp
+    | Let Identifier Exp Exp
+    | L Int
+    | Alloc Exp
+    | Deref Exp
+    | Assig Exp Exp
+    | Void
+    | Seq
+    | While Exp Exp
 \end{code}
-Un ejemplo de una lista \texttt{Snoc} es la lista [1,2,3,4,5] se ve la siguiente manera.
+Un ejemplo trivial de un programa en miniC se puede ver como sigue:
 \begin{code}
-  Snoc(Snoc(Snoc(Snoc(Snoc NilS 1)2)3)4)5
-\end{code}
-
-Las siguientes son funciones recursivas para el tipo de dato ListS(\texttt{Listas Snoc}).
-
-\begin{code}
-  -- | headS. Funcion que obtiene el primer elemento de la lista.
-  headS :: ListS a -> a
-
-  -- | tailS. Funcion que obtiene la lista sin el primer elemento.
-  tailS :: ListS a -> ListS a
-
-  -- | initS. Funcion que obtiene la lista sin el primer elemento.
-  initS :: ListS a -> ListS a
-
-  -- | lastS. Funcion que obtiene el ultimo elemento de la lista.
-  lastS :: ListS a -> a
-
-  -- | nthElementS. Funcion que regresa el n-esimo elemento de la lista.
-  nthElementS :: Int -> ListS a -> a
-
-  -- | deleteNthElementS. Funcion que elimina el n-esimo elemento de la lista.
-  deleteNthElementS :: Int -> ListS a -> ListS a
-
-  -- | addFirstS. Funcion que obtiene la lista donde el primer elemento es el
-  -- | elemento dado.
-  addFirstS :: a -> ListS a -> ListS a
-
-  -- | addLastS. Funcion que obtiene la lista donde el ultimo elemento es el
-  -- | elemento dado.
-  addLastS :: a -> ListS a -> ListS a
-
-  -- | reverseS. Funcion que obtiene la reversa de la lista.
-  reverseS :: ListS a -> ListS a
-
-  -- | appendS. Funcion que obtiene la concatenación de dos listas.
-  appendS :: ListS a -> ListS a -> ListS a
-
-  -- | takeS. Funcion que obtiene la lista con los primeros n elementos.
-  takeS :: Int -> ListS a -> ListS a
+  While (B True) Void
 \end{code}
 
-\subsection{Números naturales}
+Agregamos nuevos tipos para poder representar la memoria y direcciones.
 
 \begin{code}
-  data Nat = Zero | D (Nat) | O (Nat) deriving Show
+   type Addr = Exp
+
+   type Value = Exp
+
+   type Cell = (Addr, Value)
+
+   type Mem = [Cell]
 \end{code}
 
-Recordemos que Zero es la represantacion del cero (0), D x representa al doble
-de x, con x un número natural (2x), y O x representa al sucesor del doble de x,
-con x un número natural (2x + 1). Un ejemplo de la represantacion de un número
-natural en binario es 10011 que lo vemos de esta forma:
+Las siguientes son funciones que implementamos para poder representar el
+lenguaje miniC.
 
 \begin{code}
-  (O ( O ( D ( D ( O Zero)))))
-\end{code}
+   -- | domain. Dada una memoria, obtiene todas sus direcciones.
+   domain :: Mem -> [Int]
 
-Las siguientes son funciones recursivas para el tipo de dato \texttt{Nat}(\texttt{Numeros naturales}).
+   -- | newL. Dada una memoria genera una nueva direccion.
+   newL :: Mem -> Addr
 
-\begin{code}
-  -- | toNat. Funcion que obtiene la representacion en numeros Nat de un numero
-  -- | entero.
-  toNat :: Int -> Nat
+   -- | accessM. Dada una direccion de memoria, devuelve el valor contenido en
+   -- |          la celda con tal direccion.
+   accessM :: Addr -> Mem -> Maybe Value
 
-  -- | succ. Funcion que obtiene el sucesor de un numero Nat.
-  succN :: Nat -> Nat
+   -- | updateM. Dada una celda de memoria, actualiza el valor.
+   updateM :: Cell -> Mem -> Mem
 
-  -- | pred. Funcion que obtiene el predecesor de un numero Nat.
-  predN :: Nat -> Nat
+   -- | frVars. Extiende esta funcion del lenguaje EAB con las nuevas funciones.
+   frVars :: Exp -> [Identifier]
+  
+   -- | subst. Extiende esta funcion del lenguaje EAB con las nuevas funciones.
+   subst :: Exp -> Substitution -> Exp
 
-  -- | add. Funcion que obtiene la suma de dos numeros Nat.
-  addN :: Nat -> Nat -> Nat
+   -- | eval1. Extiende esta funcion del lenguaje EAB con las nuevas funciones.
+   eval1 :: (Mem, Exp) -> (Mem, Exp)
 
-  -- | prod. Funcion que obtiene el producto de dos numeros Nat.
-  prod :: Nat -> Nat -> Nat
+   -- | evals. Extiende esta funcion del lenguaje EAB con las nuevas funciones.
+   evals :: (Mem, Exp) -> (Mem, Exp)
+
+   -- | eval. Extiende esta funcion del lenguaje EAB con las nuevas funciones.
+   eval :: Exp -> Exp
 
 \end{code}
 
@@ -127,100 +111,62 @@ Las siguientes son funciones recursivas para el tipo de dato \texttt{Nat}(\textt
 
 El programa es interpretado por \texttt{GCHI} de la siguiente forma
 \begin{lstlisting}[]
-  ~:ghci EjerSem01.hs
+  ~:ghci EjerSem03.hs
 \end{lstlisting}
 
-\subsection{Listas Snoc}
-Ya en el programa, los siguientes son ejemplos de ejecución de las listas \texttt{Snoc}.
-\begin{lstlisting}[language=Haskell]
-  *EjerSem01> headS (Snoc (Snoc (Snoc (Snoc (Snoc NilS 1) 2) 3) 4) 5)
-  1
+\subsection{Funciones}
+Ya en el programa, los siguientes son ejemplos de ejecuciones de las funciones
+antes mencionadas.
 
-  *EjerSem01> tailS (Snoc (Snoc (Snoc (Snoc (Snoc NilS 1) 2) 3) 4) 5)
-  Snoc(Snoc(Snoc(Snoc NilS 2)3)4)5
-
-  *EjerSem01> initS (Snoc NilS 1)
-  NilS
-
-  *EjerSem01> lastS (Snoc (Snoc (Snoc (Snoc (Snoc NilS 1) 2) 3) 4) 5)
-  5
-
-  *EjerSem01> nthElementS 2 (Snoc (Snoc (Snoc (Snoc (Snoc NilS 1) 2) 3) 4) 5)
-  3
-
-  *EjerSem01> deleteNthElementS 5 NilS
-  NilS
-
-  *EjerSem01> addFirstS 0 (Snoc (Snoc (Snoc (Snoc (Snoc NilS 1) 2) 3) 4) 5)
-  Snoc(Snoc(Snoc(Snoc(Snoc(Snoc NilS 0)1)2)3)4)5
-
-  *EjerSem01> addLastS 6 (Snoc (Snoc (Snoc (Snoc (Snoc NilS 1) 2) 3) 4) 5)
-  Snoc(Snoc(Snoc(Snoc(Snoc(Snoc NilS 1)2)3)4)5)6
-
-  *EjerSem01> reverseS (Snoc (Snoc (Snoc (Snoc (Snoc NilS 1) 2) 3) 4) 5)
-  Snoc(Snoc(Snoc(Snoc(Snoc NilS 5)4)3)2)1
-
-  *EjerSem01> appendS (Snoc(Snoc(Snoc NilS 1)2)3) (Snoc(Snoc(Snoc NilS 6)7)8)
-  Snoc(Snoc(Snoc(Snoc(Snoc(Snoc NilS 1)2)3)6)7)8
-
-  *EjerSem01> takeS 0 (Snoc (Snoc (Snoc (Snoc (Snoc NilS 1) 2) 3) 4) 5)
-  NilS
-  
-\end{lstlisting}
-
-\subsection{Nat}
-Ya en el programa, los siguientes son ejemplos de ejecución de \texttt{Nat}.
 \begin{lstlisting}[language=Haskell]
 
-  *EjerSem01> toNat 616
-  D (D (D (O (D (O (O (D (D (O Zero)))))))))
+  *EjerSem03> domain []
+  []
+  *EjerSem03> domain [(L 0, B False), (L 2, I 9)]
+  [0,2]
+  *EjerSem03> newL []
+  []
+  *EjerSem03> newL [(L 0, B False),(L 2, I 9)]
+  L 1
+  *EjerSem03> accessM (L 3) []
+  Nothing
+  *EjerSem03> accessM (L 2) [(L 0, I 21), (L 1, Void), (L 2, I 12)]
+  Just (I 12)
+  *EjerSem03>  
+  *EjerSem03> updateM (L 3, B False) []
+  ***Exception: Memory addres does not exit.
+  *EjerSem03> updateM (L 0, I 22) [(L 0, I 21),(L 1, Void),(L 2, I 12)]
+  [(L 0, I 22),(L 1, Void),(L 2, I 12)]
+  *EjerSem03> frVars (Assig (L 2) (Add (I 0) (V ``z''')))
+  [``z''']
+  *EjerSem03> subst (Assig (L 2) (Add (I 0) (V ``z'''))) (``z''', B False)
+  (Assig (L 2) (Add (I 0) (B False)))
+  *EjerSem03> eval1 ([(L 0, B False)], (Add (I 1) (I 2)))
+  ([(L 0, B False)], I 3)
+  *EjerSem03> eval1 ([], While (B True) (Add (I 1) (I 1)))
+  ([], If (B True) (Seq (Add (I 1) (I 1)) (While (B True) (Add (I 1) (I 1)))) Void)
+  *EjerSem03> evals ([], (Let ``x''' (Add (I 1) (I 1)) (Eq (V ``x''') (I 0))))
+  ([], B False)
+  *EjerSem03> evals ([], Assig (Alloc (B False)) (Add (I 1) (I 9)))
+  ([(L 0, I 10)], Void)
+  *EjerSem03> eval (While (B True) Void)
 
-  *EjerSem01> succN (D(O(D Zero)))
-  O (O Zero)
-
-  *EjerSem01> predN (D(O Zero))
-  O Zero
-
-  *EjerSem01> addN (D(O(D Zero))) (D(O Zero))
-  D (D (O Zero))
-
-  *EjerSem01> prod (D(O(D Zero))) (D(O Zero))
-  D (D (O Zero))
+  *EjerSem03> eval (Or (Eq (Add (I 0) (I 0)) (I 0)) (Eq (I 1) (I 1)))
+  B True
 
 \end{lstlisting}
 
 \section{Conclusiones}
 
-Hubo varios problemas relacionados a ambos tipos de datos, pero en general fue
-una ejercicio sencillo, los tipos de problemas eran cuestión de entender bien
-qué es lo que tenía que hacer no fue muy complicado de entender.
+Fue algo sencillo, pues ya teníamos eval1, evals, eval del lenguaje EAB, sin
+embargo, como había que hacer cosas con la memoria no podíamos pasarlo literal,
+así que se tuvieron que hacer unas modificaciones, y todo salió bien, como eval1
+tiene que regresar un error si le pasamos un terminal, se implementó evals
+porque en algún punto no dejaba continuar con la ejecución.
 
-\subsection{Listas}
-
-El mayor problema con las listas \texttt{Snoc} fue en las funciones de
-\texttt{nthElementS}, y \texttt{deleteNthElementS} porque en un inicio pensé que
-se tenía que recorrer desde digamos del elemento junto a \texttt{NilS}, fue
-complicado pensar como ir toda la lista hacia dentro y luego ir avanzando, luego
-pensé que se tenía que recorrer del último elemento, y así estaba sencillo de
-implementar, pero al final siempre si era desde el elemento junto a
-\texttt{NilS}, lo gracioso fue que la segunda vez ya no fue complicado de
-implementar, y eran problemas similares, una vez que logré recorrer la lista,
-fue fácil regresar el elemento o borrarlo, \texttt{takeS} fue similar, pero al
-momento de implementarlo ya había resuelto el problema de recorrer la lista.
-
-\subsection{Nat}
-
-Implemetar este tipo de dato fue relativamente sencillo, pues ya había hecho
-algo similar, el mayor problema fue que hay muchas maneras de escribir el mismo
-número, pero todas se pueden simplificar, se puede escribir \texttt{(...(D
-  Zero))} que es igual a quitar la \texttt{D} junto al cero, pues el doble de
-\texttt{Zero} es el mismo, y al momento de hacer pruebas, a veces las hacía sin
-esa \texttt{D}, y todo salía según lo esperado, pero cuando se la ponía en la
-función \texttt{prod} no funcionaba, al final terminé casi por arreglarlo,
-pues solo puede borrar una de las n posibles \texttt{D\'s}. Otro problema fue
-con la suma, pero no entiendo bien qué pasó, a veces jalaba y a veces no, fue
-interesante poder simplificarla, pues en un inicio pensé en hacer todas las
-combinaciones posibles para su implementación.
+Un problema fue que al atrapar errores del while, no caen ahí, sino que caen en
+el if, eso es malo, pues un while true, no debería regresar un error, sin
+embargo, regresa uno por parte del if.
 
 
 \begin{thebibliography}{9}
